# website

./: index.html  solitaire.html
assets/: asta-blinker.aseprite
scripts/: solitaire.js
wasm/solitaire-wasm/: Cargo.toml
wasm/solitaire-wasm/src/: lib.rs  shared_functions.rs  types.rs
www/: .gitignore  blog.html  index.html  solitaire.html
www/assets/: under-construction.aseprite
www/left-destitute-by/: STRESS.txt
www/scripts/: site-updates.js  solitaire.js
www/scripts/solitaire/: solitaire.js
www/scripts/solitaire/solitaire-wasm/: pkg
www/scripts/solitaire/solitaire-wasm/src/: shared_functions.rs
www/site-update-log/: index.html
www/style/: solitaire.css  style.css  update-log.css
www/untitled-1/: alone.txt  index.html  story-style.css
