[package]
name = "solitaire-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Random number gen in (with JS support)
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }

# WASM and JS integration
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.203", features = ["derive"] }
console_error_panic_hook = "0.1.7"

[profile.release]
strip = true
opt-level = "z"
lto = true

